# YellowCab

./: .env.sample  .gitignore  Makefile  pyproject.toml  requirements.txt
api/: app.py  app_config.py  main.py
lessons/: Experimen-Tracking-and_model-Registry.md  best_practices_guide.md  model-deployement.md
models/: dv.pkl  linear_regression.pkl
notebooks/: Experiment-Tracking-and_model-Registry.ipynb  practice-intro-subject.ipynb  test.ipynb
solution/web_service/: main.py
solution/web_service/local_models/: pipeline__v0.0.1.joblib
src/yellowcab/: modelling.py
