[project]
name = "yellowcab"
version = "0.1.0"
description = ""
authors = [
    {name = "Aloys Bernard",email = "aloys.bernard@artefact.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "yellowcab", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
